# PhysNet

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  run_all.py
core/: __init__.py  conditions.py  loss_engine.py  network.py  trainer.py
examples/: run_burgers.py  run_heat.py  run_poisson.py
physics/: __init__.py  base.py  burgers.py  heat.py  poisson.py
tests/: test_conditions.py  test_loss_engine.py  test_network.py  test_physics.py  test_sampler.py
utils/: __init__.py  sampler.py  visualizer.py
